# NovaHyper

./: .gitignore  Dockerfile.dev  README.md  RELEASE_CHECKLIST_V0.3.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/endpoints/: audit.py  auth.py  backups.py  tenants.py  vms.py
app/core/: config.py  deps.py  middleware.py  security.py
app/db/: session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py  (+7 more)
app/models/: __init__.py
app/schemas/: __init__.py  audit.py  backups.py  tenants.py
app/services/: audit.py  backup_service.py  metering.py  partition_manager.py  usage_metering.py  vm_service.py
app/workers/: backup_consumer.py
dedup/: chunk_store.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: audit.ts  auth.ts  backups.ts  client.ts  tenants.ts  vms.ts
frontend/src/contexts/: AuthContext.tsx  NotificationContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useAudit.ts  useBackups.ts  useMetrics.ts  useTenants.ts  useVMs.ts
frontend/src/pages/: Audit.tsx  Backups.tsx  Dashboard.tsx  Login.tsx  Settings.tsx  Tenants.tsx  VMs.tsx
frontend/src/types/: index.ts
frontend/src/utils/: format.ts
scripts/: prometheus.yml
scripts/db/: init.sql
tests/integration/: test_rls.py  test_tenant_lifecycle.py
tests/unit/: test_audit_endpoints.py  test_audit_service.py  test_backups.py  test_chunk_store.py  test_deps.py  test_metering.py  test_partition_manager.py  test_tenants.py  test_usage_metering.py
(+27 files in other folders)
